added margin-b to 'book now' btn

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           Start your travel at an affordable price with Travelly. <br />
           Contact us now below:
         </h3>
-        <button class="btn">Book Now!</button>
+        <button id="btn-book" class="btn">Book Now!</button>
       </section>
       <section id="locations">
         <header class="locations-head">
